# remove-duplicates

./: remove-duplicates.cabal
app/: Main.hs
